fixed letter spacing in logo for mobile

--- a/style.css
+++ b/style.css
@@ -459,7 +459,7 @@ html[xmlns] .clearfix {
           padding:4%;
         }
         #logo a{
-          letter-spacing:0.75em;
+          letter-spacing:0;
         }
 
         .post{
